--- a/less/media.less
+++ b/less/media.less
@@ -254,8 +254,12 @@
         max-width: 1073.34px;
         width: 90%;
     }
+    .universities__slider,
+    .courses__slider,
+    .gallery__slider {
+        margin: 0px -90px;
+    }
 }
-
 
 
 @media screen and (max-width: 1200px) {
@@ -383,6 +387,12 @@
     }
     .opacity {
         opacity: 1;
+    }
+
+    .universities__slider,
+    .courses__slider,
+    .gallery__slider {
+        margin: 0px;
     }
     
     .academic-header {
@@ -1230,6 +1240,9 @@
     .gallery-slider__btn  {
         display: block;
     }
+    .gallery-slider-mobile {
+        display: block;
+    }
 
     .footer {
         &::before {
@@ -1309,7 +1322,7 @@
         top: 63%;
     }
     .header-slider {
-        background-position: 71%, 40%;
+        background-position: 63%, 40%;
     }
 
     .header-slider__nav {
@@ -1340,9 +1353,7 @@
             font-size: 14px;
         }
     }
-    .gallery-slider-mobile {
-        display: block;
-    }
+   
     
     .feedback-item {
         &__inner {
