--- a/less/style.less
+++ b/less/style.less
@@ -906,7 +906,12 @@ summary {
 .assistent-slider-wrap {
     position: relative;
     z-index: 29;
+    .assistent-slider__wrap{
+        display: flex;
+        justify-content: space-between;
+    }
 }
+
 .header-assistent-slider {
     position: absolute;
     top: -128px;
@@ -2169,9 +2174,3 @@ background: #0052d5;
     }
 }
 
-.slick-slide[aria-hidden="true"] {
-    opacity: 0.5;
-}
-
-
-// .center .slick-center h3{-moz-transform:scale(1.08);-ms-transform:scale(1.08);-o-transform:scale(1.08);-webkit-transform:scale(1.08);color:#e67e22;opacity:1;transform:scale(1.08);}
