--- a/less/media.less
+++ b/less/media.less
@@ -204,6 +204,10 @@
 
 @media screen and (max-width: 1400px){
 
+    .social-nav {
+        right: 15px;
+    }
+
     .slider-wrap {
         padding: 0;
     }
@@ -387,6 +391,10 @@
     }
     .opacity {
         opacity: 1;
+    }
+
+    .social-nav {
+        display: none;
     }
 
     .universities__slider,
