--- a/less/style.less
+++ b/less/style.less
@@ -504,6 +504,7 @@ summary {
     display: none;
 
     &__social-wrap {
+        margin-bottom: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -857,19 +858,9 @@ summary {
 }
 .social-nav {
     position: fixed;
-    display: none;
     top: 50%;
     right: 45px;
     transform: translate(0, -50%);
-    // transform: translate3d(0,0,0);
-    // -webkit-transform: translate(0, 0);     
-    // -ms-transform: translate(0, 0);     
-    // -o-transform: translate(0, 0);     
-    // transform: translate(0, 0);
-
-    // &--index {
-    //     z-index: 9;
-    // }
    
     &__main {
        position: absolute;
@@ -906,10 +897,6 @@ summary {
 .assistent-slider-wrap {
     position: relative;
     z-index: 29;
-    .assistent-slider__wrap{
-        display: flex;
-        justify-content: space-between;
-    }
 }
 
 .header-assistent-slider {
