fix university and courses slider for tablet

--- a/css/media.css
+++ b/css/media.css
@@ -649,6 +649,12 @@
   }
 }
 @media screen and (max-width: 720px) {
+  .universities__slider .slider-item {
+    width: 400px;
+  }
+  .courses__slider .slider-item {
+    width: 400px;
+  }
   .navigation-menu {
     margin-bottom: 73px;
   }
@@ -908,7 +914,7 @@
   }
   .btn-wrap--university {
     margin: auto;
-    width: 69%;
+    width: 54%;
     position: absolute;
     justify-content: space-between;
     display: flex;
@@ -918,7 +924,7 @@
   }
   .btn-wrap--courses {
     margin: auto;
-    width: 69%;
+    width: 54%;
     position: absolute;
     justify-content: space-between;
     display: flex;
@@ -1004,6 +1010,10 @@
   }
   .btn--university {
     padding: 10px;
+  }
+  .btn-wrap--courses,
+  .btn-wrap--university {
+    width: 69%;
   }
   .header-wrap {
     display: flex;
