--- a/less/media.less
+++ b/less/media.less
@@ -855,6 +855,16 @@
 
 
 @media screen and (max-width: 720px) {
+    .universities__slider {
+        .slider-item {
+            width: 400px;
+        }
+    }
+    .courses__slider {
+        .slider-item {
+            width: 400px;
+        }
+    }
 
     .navigation-menu {
         margin-bottom: 73px;
@@ -1186,7 +1196,7 @@
     .btn-wrap {
         &--university{
          margin: auto;
-         width: 69%;
+         width: 54%;
          position: absolute;
          justify-content: space-between;
          display: flex;
@@ -1196,7 +1206,7 @@
         }
          &--courses{
              margin: auto;
-             width: 69%;
+             width: 54%;
              position: absolute;
              justify-content: space-between;
              display: flex;
@@ -1303,6 +1313,11 @@
      .btn--university {
         padding: 10px;
      }
+     .btn-wrap--courses,
+     .btn-wrap--university{
+         width: 69%;
+     }
+    
     .header-wrap {
         display: flex;
         justify-content: space-between;
