--- a/less/media.less
+++ b/less/media.less
@@ -768,6 +768,7 @@
         display: flex;
        
     }
+
     .connection-info__item--search-menu {
         justify-content: flex-start;
     }
@@ -1332,7 +1333,21 @@
     #menu {
         margin-left: 0;
     }
+    .adaptive-menu{
 
+        &__info {
+            margin-bottom: 10px;
+            padding-bottom: 10px;
+            font-size: 12px;
+        }
+        
+        &__social-wrap {
+            margin-bottom: 15px;
+            .menu-logo {
+                margin: 15px 0;
+            }
+        }
+    }
     .rectangle-decorate {
         top: -36%;
         left: -126px;
