--- a/less/style.less
+++ b/less/style.less
@@ -534,6 +534,7 @@ summary {
         justify-content: space-between;
         width: 210px;
         text-transform: uppercase;
+        padding-bottom: 8px;
     }
 
    }
@@ -615,7 +616,7 @@ summary {
     margin-bottom: 150px;
 
     &__wrap {
-        margin-top: 15px;
+        margin-top: 30px;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -627,6 +628,7 @@ summary {
         text-transform: uppercase;
         color: #fff;
         border-bottom: 2px solid #fff;
+        padding-bottom: 13px;
     }
 
     &__drop-down {
