--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
 html,
 body {
   scroll-behavior: smooth;
