--- a/less/style.less
+++ b/less/style.less
@@ -5,8 +5,8 @@
 }
 
 body {
-    // min-height: 100vh;
-    // min-height: -webkit-fill-available;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
   }
 
   
