--- a/less/media.less
+++ b/less/media.less
@@ -141,12 +141,12 @@
     
     .universities {
         .square-decorate {
-            top: -46%;
+            top: -45%;
             z-index: 2;
             left: -434px;
         
             &--transparent {
-                top: -46%;
+                top: -45%;
                 z-index: 2;
                 left: -396px;
             }
@@ -203,7 +203,6 @@
 }
 
 @media screen and (max-width: 1450px){
-
     .social-nav {
         right: 15px;
     }
@@ -244,7 +243,8 @@
         }
 
         &__buttons {
-            top: 26px;
+            right: -88px;
+            top: 5px;
         }
         &__mail-title {
             margin-top: 10px;
@@ -262,6 +262,40 @@
     .courses__slider,
     .gallery__slider {
         margin: 0px -90px;
+    }
+
+    .header-slider .arrow-decorate--left{
+        left: -60px;
+    }
+    .header-assistent-slider {
+        top: -150px;
+    }
+    .subtitle-wrap .dots-img {
+        margin-right: 24px;
+        margin-top: 7px;
+    }
+
+    .rectangle-decorate-block {
+        top: -269px;
+    }
+    .academic-header__content {
+        justify-content: center;
+    }
+
+    .academic-header__title {
+        margin-top: 0;
+        margin-bottom: 0;
+        letter-spacing: 0.02em;
+    }
+    .banner {
+        margin-left: 20px;
+    }
+    
+}
+
+@media screen and (max-width: 1370px){
+    .header-slider__buttons {
+        right: -118px;
     }
 }
 
@@ -363,6 +397,9 @@
     .academic-header .arrow-decorate{
        display: none;
     }
+    .academic-header__title {
+        font-size: 89px;
+    }
 
     .banner {
         font-size: 18px;
@@ -416,17 +453,18 @@
           &__years {
               font-size: 27px; 
           }
+          
       }
 
+      .academic-header {
+        &__title {
+            font-size: 65px; 
+        }
+    }
       .admission-form {
-      
-    
         &__header {
             font-size: 23px;
-            
         }
-    
-      
     }
     .footer-form {
 
@@ -434,8 +472,6 @@
             margin: 20px auto 0;
         }
     }
-    
-   
 }
 
 @media screen and (max-width: 997px)  {
@@ -464,11 +500,7 @@
             height: 57px;
         }
     }
-    .academic-header {
-        &__title {
-            font-size: 65px; 
-        }
-    }
+    
     
     .connection-info__btn {
         padding: 12px 26px;
