--- a/less/style.less
+++ b/less/style.less
@@ -287,9 +287,9 @@ a{
     position: absolute;
     z-index: 3;
     bottom: -29px;
-    right: -29px;
-    padding: 7px 14px;
-    font-size: 15px;
+    right: -47px;
+    padding: 8px 14px;
+    font-size: 17px;
 }
 
 .connection-info__btn--menu {
@@ -952,7 +952,7 @@ summary {
         font-size: 31px;
         line-height: 36px;
         text-align: center;
-        color: #B8B8B8;
+        color: #c7c7c7;
         opacity: 0.2;
      
     }
@@ -1012,7 +1012,7 @@ summary {
 }
 
 .assistent-slider-item:hover .assistent-slider-item__title {
-   opacity: 1;
+   opacity: 0.5;
 }
 .button--sticky {
     display: block;
@@ -1348,7 +1348,7 @@ summary {
         box-shadow: inset 0px 2px 6px rgba(0, 0, 0, 0.25);
         font-weight: 500;
         font-size: 14px;
-        color: rgba(190, 190, 190, 0.9);
+        color:  #737373;
         padding: 14px;
         border-radius: 6px;
         border: none;
