--- a/less/style.less
+++ b/less/style.less
@@ -744,6 +744,7 @@ summary {
             color: #FFFFFF;
             border-left: 3px solid rgba(255,255,255, 0.8);
             opacity: 0.8; 
+            cursor: pointer;
         }
 
         &-num {
