--- a/less/style.less
+++ b/less/style.less
@@ -286,9 +286,9 @@ a{
     display: none;
     position: absolute;
     z-index: 3;
-    bottom: -29px;
-    right: -47px;
-    padding: 8px 14px;
+    bottom: -22px;
+    right: -56px;
+    padding: 8px 23px;
     font-size: 17px;
 }
 
@@ -381,10 +381,8 @@ a{
         &--menu {
             display: flex;
             justify-content: flex-start;
-        }
-        
+        }        
     }
-
 
     .connection-info__btn {
         padding: 12px 37px;
@@ -782,9 +780,6 @@ summary {
     }
 }
 
-
-
-
 .opacity {
     opacity: 0.5;
 }
@@ -877,6 +872,9 @@ summary {
         height: 47px;
         border-radius: 50%;
         background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+        img {
+            margin-bottom: 3px;
+        }
     }
 
     &__list {
