fix skitku forms

--- a/css/media.css
+++ b/css/media.css
@@ -185,14 +185,14 @@
     height: 32px;
   }
   .header-slider__buttons {
-    right: -88px;
+    right: -129px;
     top: 5px;
   }
   .header-slider__mail-title {
     margin-top: 10px;
   }
   .header-assistent-slider {
-    left: 12%;
+    left: 15%;
   }
   .slider-line {
     max-width: 1073.34px;
@@ -229,8 +229,8 @@
   }
 }
 @media screen and (max-width: 1370px) {
-  .header-slider__buttons {
-    right: -118px;
+  .header-assistent-slider {
+    left: 13%;
   }
 }
 @media screen and (max-width: 1200px) {
