--- a/less/media.less
+++ b/less/media.less
@@ -247,7 +247,7 @@
         }
 
         &__buttons {
-            right: -88px;
+            right: -129px;
             top: 5px;
         }
         &__mail-title {
@@ -256,7 +256,7 @@
     }
 
     .header-assistent-slider {
-        left: 12%;
+        left: 15%;
     }
     .slider-line {
         max-width: 1073.34px;
@@ -298,8 +298,8 @@
 }
 
 @media screen and (max-width: 1370px){
-    .header-slider__buttons {
-        right: -118px;
+    .header-assistent-slider {
+        left: 13%;
     }
 }
 
