--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -67,3 +67,63 @@
     background-position: 52%, 40%;
   }
 }
+@media screen and (max-width: 800px) {
+  .check-universe {
+    margin-bottom: 40px;
+  }
+  .check-universe__wrap {
+    flex-direction: column;
+  }
+  .check-universe__buttons {
+    display: flex;
+    margin-right: 20px;
+  }
+  .check-universe__btn {
+    margin: 9px 0;
+    padding: 6px 16px;
+    width: 146px;
+    text-transform: uppercase;
+    color: #fff;
+    background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 18.5px;
+    font-size: 20px;
+    text-align: center;
+  }
+  .check-universe__btn--active {
+    background: linear-gradient(207.28deg, #ff0000 9.11%, #ce0000 98.12%);
+    position: relative;
+  }
+  .check-universe__list {
+    flex-direction: column;
+  }
+  .check-universe__list::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-60%, 0);
+    height: 3px;
+    background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
+    width: 100%;
+    z-index: -1;
+  }
+  .check-universe__list::after {
+    content: "";
+    position: absolute;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    left: -20px;
+    top: 50%;
+    transform: translate(-50%, -4px);
+    background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%);
+  }
+  .universe-items {
+    flex-direction: column;
+  }
+  .universe-item {
+    margin: 0 auto;
+    max-width: 221px;
+  }
+}
