--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -89,3 +89,76 @@
         background-position: 52%, 40%;
     }
 }
+
+@media screen and (max-width: 800px){
+    .check-universe {
+        margin-bottom: 40px;
+        &__wrap {
+            // display: flex;
+            // width: 65%;
+            flex-direction: column;
+        }
+    
+        &__buttons {
+            display: flex;
+            margin-right: 20px;
+        }
+    
+        &__btn {
+            margin: 9px 0;
+            padding: 6px 16px;
+            width: 146px;
+            text-transform: uppercase;
+            color: #fff;
+            background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+            border-radius: 18.5px;
+            font-size: 20px;
+            text-align: center;
+    
+            &--active{
+                background: linear-gradient(207.28deg, #FF0000 9.11%, #CE0000 98.12%);
+                position: relative;
+            }
+        }
+    
+        &__list{
+            // width: 100%;
+            // margin: 5px 0;
+            // position: relative;
+            // justify-content: space-between;
+            // position: relative;
+            flex-direction: column;
+            &::before{
+                content: "";
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-60%, 0);
+                height: 3px;
+                background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
+                width: 100%;
+                z-index: -1;
+            }
+    
+            &::after {
+                content: "";
+                position: absolute;
+                width: 11px;
+                height: 11px;
+                border-radius: 50%;
+                left: -20px;
+                top: 50%;
+                transform: translate(-50%, -4px);
+                background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%);
+            }
+        }
+    }
+    .universe-items{
+        flex-direction: column;
+    }
+    .universe-item {
+        margin: 0 auto;
+        max-width: 221px;
+    }
+}
