--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,9 @@ summary {
 .opacity {
   opacity: 0.5;
 }
+.opacity-mobile {
+  opacity: 0.5;
+}
 .header-slider-absolute {
   position: absolute;
   top: 0;
