--- a/less/style.less
+++ b/less/style.less
@@ -784,6 +784,10 @@ summary {
     opacity: 0.5;
 }
 
+.opacity-mobile {
+    opacity: 0.5;
+}
+
 .header-slider-absolute {
     position: absolute;
     top: 0;
