--- a/less/media.less
+++ b/less/media.less
@@ -1005,6 +1005,12 @@
         display: none;
     }
 
+
+    .gallery {
+        .opacity {
+            opacity: 0.5;
+        }
+    }
    
     .feedback-item {
         &__inner {
@@ -1084,6 +1090,7 @@
      margin-left: -22px;
     }
   .header-slider {
+      border-bottom: none;
     &__mail-title {
          font-size: 36px;
      }
@@ -1117,6 +1124,8 @@
          display: flex;//
          align-items: center;//
          margin-left: -20px;
+        position: relative;
+        bottom: -4px;
      }
          &-item {
              width: 16.66%;
@@ -1292,7 +1301,10 @@
             padding: 0;
         }
         .gallery-slider-item {
-            max-width: 235.37px !important;
+           max-width: 100%;
+           max-height: 267px;
+           object-fit: cover;
+           display: block;
             &:hover {
                 transform: scale(1);
             }
@@ -1360,6 +1372,9 @@
     }
     .navigation-item__link {
         font-size: 8px;
+       &--adaptive-menu {
+           font-size: 13px;
+       }
     }
     .navigation-item__icon {
         margin-right: 5px;
@@ -1389,7 +1404,7 @@
         margin-left: 0;
     }
     .adaptive-menu{
-
+        padding: 10px 17px;
         &__info {
             margin-bottom: 10px;
             padding-bottom: 10px;
@@ -1441,16 +1456,22 @@
     .academic {
         &__years {
             font-size: 11px;
+            border: 2px solid #fff;
         }
         &__title {
             font-size: 14px;
         }
     }
+
+    .subtitle-wrap .dots-img {
+        margin-right: 11px;
+        margin-top: 2px;
+    }
    
     
     .feedback-item {
         &__inner {
-            margin: 15px;
+            margin: 21px 24px 24px 24px;
         }
 
         &__img {
