--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,14 @@ a {
 .header--sticky {
   background: #FFFFFF;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+  padding: 12px 0px 22px;
+}
+.header--sticky .logo--header img {
+  width: 186.17px;
+  height: 43.27px;
+}
+.header--sticky .header__nav-sticky {
+  display: flex;
 }
 .header-wrap {
   position: relative;
@@ -66,6 +74,22 @@ a {
   font-size: 15px;
   color: #343434;
   transition: 0.3s;
+}
+.header__nav-sticky {
+  display: none;
+  justify-content: flex-end;
+  margin-bottom: 15px;
+}
+.header__nav-sticky .navigation-item__link {
+  color: #0031C4;
+  font-weight: bold;
+  font-size: 13px;
+}
+.header__nav-sticky .navigation-item__icon {
+  background-color: #fff;
+}
+.header__nav-sticky .navigation-item--header--sticky {
+  margin-left: 53px;
 }
 .header__item {
   position: relative;
@@ -240,7 +264,7 @@ a {
   display: none;
   position: absolute;
   z-index: 3;
-  bottom: -22px;
+  bottom: -36px;
   right: -56px;
   padding: 8px 23px;
   font-size: 17px;
