--- a/less/media.less
+++ b/less/media.less
@@ -319,6 +319,10 @@
         &__nav {
             display: none;
         }
+
+        &--sticky {
+            padding: 5px 0;
+        }
     }
 
     .universities .dots-decorate-red {
