--- a/less/style.less
+++ b/less/style.less
@@ -493,7 +493,6 @@ a{
 
     &__icon {
         margin-right: 10px;
-        background-color: #0066FF;
         border-radius: 50%;
 
         &--header-slider {
@@ -697,6 +696,7 @@ summary {
     font-family: Roboto;
     color: #FFFFFF;
     border-bottom: 5px solid #B8B8B8;
+    transition: 0.3s;
 
     &__img-wrap {
         height: 100%;
@@ -915,10 +915,6 @@ summary {
 
     &__list {
         position: relative;
-        // -webkit-transform: translate(0, 0);     
-        // -ms-transform: translate(0, 0);     
-        // -o-transform: translate(0, 0);     
-        // transform: translate(0, 0);
         background: rgba(0, 0, 0, 0.45);
         border-radius: 17px;
         padding: 40px 7px 18px 7px;
