--- a/css/media.css
+++ b/css/media.css
@@ -246,6 +246,10 @@
   .header--sticky {
     padding: 5px 0;
   }
+  .header--sticky .logo img {
+    width: 175px;
+    height: 38px;
+  }
   .universities .dots-decorate-red {
     width: 66.28px;
     height: 51.55px;
@@ -842,6 +846,7 @@
   }
   .header-slider__assistant-subtitle {
     font-size: 15px;
+    line-height: 15px;
   }
   .header-slider__nav {
     position: relative;
@@ -884,6 +889,18 @@
   .header-slider__nav-item--active {
     font-size: 15px;
     line-height: 1.2;
+    position: relative;
+  }
+  .header-slider__nav-item--active:before {
+    content: "";
+    position: absolute;
+    top: -4px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 9px;
+    height: 9px;
+    background-color: #fff;
+    border-radius: 50%;
   }
   .square-decorate,
   .assistent-slider-wrap,
@@ -891,7 +908,7 @@
     display: none;
   }
   .btn--header-slider {
-    padding: 7px;
+    padding: 7px 13px;
     font-size: 12px;
   }
   .header-slider__buttons {
@@ -1041,6 +1058,10 @@
     width: 100%;
     padding: 0 20px;
   }
+  .header--sticky .logo--header img {
+    height: 25px;
+    width: 113px;
+  }
   .search__input--menu {
     width: 100%;
     margin-right: 0;
@@ -1054,26 +1075,32 @@
     width: calc(100% + 9px) !important;
     padding: 10px 0;
   }
+  .connection-info__item--menu {
+    margin-bottom: 0;
+  }
   .search__btn {
     right: 0px;
   }
   .connection-info-tablet {
     width: 100%;
     justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .navigation-item--tablet {
+    margin-bottom: 6px;
+  }
+  .adaptive-header__inner--tablet {
+    padding-bottom: 0;
   }
   .navigation-item--tablet {
     margin-right: 1%;
   }
   .navigation-item__link {
-    font-size: 8px;
+    font-size: 14px;
+    font-weight: bold;
   }
   .navigation-item__link--adaptive-menu {
     font-size: 13px;
-  }
-  .navigation-item__icon {
-    margin-right: 5px;
-    width: 9px;
-    height: 9px;
   }
   .btn--university {
     padding: 10px;
@@ -1111,18 +1138,24 @@
     margin: 15px 0;
   }
   .rectangle-decorate {
-    top: -36%;
-    left: -126px;
+    top: -40%;
+    left: -110px;
   }
   .header-slider__mail-title {
     margin-top: 0;
     font-size: 33px;
   }
+  .header-slider__assistant-subtitle {
+    margin-bottom: 7px;
+  }
+  .header-slider__content {
+    padding-top: 40px;
+  }
   .slider-header-btn {
     top: 63%;
   }
   .header-slider {
-    background-position: 63%, 40%;
+    background-position: 68%, 40%;
   }
   .header-slider__nav {
     position: relative;
