--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,6 @@ a {
 }
 .navigation-item__icon {
   margin-right: 10px;
-  background-color: #0066FF;
   border-radius: 50%;
 }
 .navigation-item__icon--header-slider {
@@ -588,6 +587,7 @@ summary {
   font-family: Roboto;
   color: #FFFFFF;
   border-bottom: 5px solid #B8B8B8;
+  transition: 0.3s;
 }
 .header-slider__img-wrap {
   height: 100%;
