--- a/css/style.css
+++ b/css/style.css
@@ -1202,12 +1202,14 @@ summary {
   position: absolute;
   z-index: 2;
   left: 50%;
-  top: 0;
+  top: -2px;
   transform: translate(-50%, 0);
   border: 55px solid transparent;
   border-top: 15px solid #fff;
 }
 .step-block__header {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   position: relative;
   padding: 20px 0;
   font-family: Roboto;
